--- a/xxl_qso_sample.ipynb
+++ b/xxl_qso_sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bored-representation",
+   "id": "trying-indianapolis",
    "metadata": {},
    "source": [
     "Selection of SDSS-QSO in XXL-North field\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "limited-springfield",
+   "id": "addressed-namibia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "worse-modem",
+   "id": "statewide-analysis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,8 +59,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "charming-integer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from astropy import units as u\n",
+    "from astropy.coordinates import Angle\n",
+    "\n",
+    "sources_moc = MOC()\n",
+    "mask_radius = 30 * u.arcsec\n",
+    "\n",
+    "for c in xxl_sdssqso_coords:\n",
+    "    moc = MOC.from_cone(c.icrs.ra, c.icrs.dec, mask_radius, max_depth=16)\n",
+    "    sources_moc = sources_moc.union(moc)\n",
+    "\n",
+    "for c in xxl_4xmm_coords:\n",
+    "    moc = MOC.from_cone(c.icrs.ra, c.icrs.dec, mask_radius, max_depth=16)\n",
+    "    sources_moc = sources_moc.union(moc)\n",
+    "    \n",
+    "xxl_sdssqso_masked_moc = xxl_moc.difference(sources_moc)\n",
+    "\n",
+    "filename = data_folder.joinpath(\"xxl_sdssqso_4xmm_masked.moc\")\n",
+    "xxl_sdssqso_masked_moc.write(filename, format=\"fits\", overwrite=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "vital-julian",
+   "id": "spoken-bones",
    "metadata": {},
    "source": [
     "Download RapidXMM data for QSO far from X-ray sources:"
@@ -69,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "medium-triangle",
+   "id": "recognized-writing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,14 +106,14 @@
     "uls_qso_farfrom_xsources = rapidxmm.query_coords(qso_farfrom_xsources_coords, obstype=\"pointed\", instrum=\"PN\")\n",
     "\n",
     "uls_qso_farfrom_xsources_file = data_folder.joinpath(\"uls_qso_farfrom_xsources_xxl.fits\")\n",
-    "uls_qso_farfrom_xsources.write(uls_qso_farfrom_xsources_file, format=\"fits\", overwrite=True)\n",
+    "uls_qso_farfrom_xsources.write(uls_qso_farfrom_xsources_file.as_posix(), format=\"fits\", overwrite=True)\n",
     "\n",
     "len(uls_qso_farfrom_xsources)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "warming-marina",
+   "id": "coupled-villa",
    "metadata": {},
    "source": [
     "Download RapidXMM data for QSO with X-ray counterparts:"
@@ -95,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "weighted-delay",
+   "id": "beneficial-wagon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,16 +156,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infrared-discount",
+   "id": "quiet-satisfaction",
    "metadata": {},
    "source": [
-    "Band 8 count-rates distirbution, including stacking results:"
+    "Band 8 count-rates distribution, including stacking results:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "known-music",
+   "id": "engaging-attraction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,18 +178,18 @@
     "plt.rcParams[\"axes.formatter.use_mathtext\"] = True\n",
     "plt.rcParams[\"legend.labelspacing\"] = 0.25\n",
     "    \n",
-    "plt.figure(figsize=(6, 2.5))\n",
+    "plt.figure(figsize=(7, 3.5))\n",
     "\n",
-    "plt.subplot(121)\n",
+    "plt.subplot(131)\n",
     "bins = np.logspace(-4, 1, num=21)\n",
     "plt.hist(uls_qsox[\"band8_cr\"], bins=bins, color=\"gray\")\n",
     "plt.axvline(1.5e-03, ls=\"--\", lw=3, color=\"k\")\n",
     "plt.xlim(1e-4, 1)\n",
     "plt.xscale('log')\n",
     "plt.grid(ls=\":\", lw=1.5)\n",
-    "plt.xlabel(\"count rate (0.2-12 keV)\")\n",
+    "plt.xlabel(\"count rate\\n (0.2-12 keV)\")\n",
     "\n",
-    "plt.subplot(122)\n",
+    "plt.subplot(132)\n",
     "cr_ratio = uls_qsox[\"band7_cr\"] / uls_qsox[\"band6_cr\"]\n",
     "cr_ratio_stack = 3.4e-04 / 9.9e-04\n",
     "bins = np.logspace(-3, 2, num=21)\n",
@@ -171,7 +198,18 @@
     "plt.xlim(1e-3, 100)\n",
     "plt.xscale('log')\n",
     "plt.grid(ls=\":\", lw=1.5)\n",
-    "plt.xlabel(\"hard-to-soft count rate ratio\")\n",
+    "plt.xlabel(\"hard-to-soft\\n count rate ratio\")\n",
+    "\n",
+    "plt.subplot(133)\n",
+    "texp = uls_qsox[\"band8_exposure\"] / 1000\n",
+    "texp_stack = 1.8e6 / 1000\n",
+    "bins = np.logspace(-1, 2, num=21)\n",
+    "plt.hist(texp, bins=bins, color=\"gray\")\n",
+    "plt.axvline(texp_stack, ls=\"--\", lw=3, color=\"k\")\n",
+    "plt.xlim(1e-1, 1e4)\n",
+    "plt.xscale('log')\n",
+    "plt.grid(ls=\":\", lw=1.5)\n",
+    "plt.xlabel(\"exposure time / ks\\n(0.2-12 keV) \")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.savefig(\"stacking_qso_xxl_crdist.pdf\", bbox_inches='tight', pad_inches=0)\n",
@@ -195,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
