--- a/xxl_stacking.ipynb
+++ b/xxl_stacking.ipynb
@@ -23,6 +23,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from pathlib import Path\n",
     "from astropy.table import Table, unique\n",
     "\n",
@@ -48,7 +58,7 @@
     "    max_data=10000,\n",
     "    calc_flux=False,\n",
     "    use_flagged_pixels=False,\n",
-    "    custom_bkg=False,\n",
+    "    custom_bkg=True,\n",
     "    with_plots=True,\n",
     "    plotfile=Path(\"stacking_qso_xxl.pdf\")\n",
     ")"
@@ -58,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we stack random positions in the XXL field selected far from any X-ray source or optical QSO. For this we have defined a MOC where areas within 1 arcmin around any QSO or X-ray sources are removed. We select random healpix cells within that MOC for stacking."
+    "Now we stack random positions in the XXL field selected far from any X-ray source or optical QSO. For this we have defined a MOC where areas within 30 arcsec around any QSO or X-ray sources are removed. We select random healpix cells within that MOC for stacking."
    ]
   },
   {
@@ -71,7 +81,7 @@
     "from mocpy import MOC\n",
     "from mocpy.core import flatten_pixels\n",
     "\n",
-    "xxl_masked_moc_file = data_folder.joinpath(\"xxl_sdss_xmm4_masked_sources.moc\")\n",
+    "xxl_masked_moc_file = data_folder.joinpath(\"xxl_sdssqso_4xmm_masked.moc\")\n",
     "xxl_masked_moc = MOC.from_fits(xxl_masked_moc_file)\n",
     "xxl_masked_hpixels = flatten_pixels(xxl_masked_moc._interval_set._intervals, 16)\n",
     "\n",
@@ -93,7 +103,7 @@
     "    max_data=10000,\n",
     "    calc_flux=False,\n",
     "    use_flagged_pixels=False,\n",
-    "    custom_bkg=False,\n",
+    "    custom_bkg=True,\n",
     "    with_plots=True,\n",
     "    plotfile=Path(\"stacking_rnd_xxl.pdf\"),\n",
     "    scale=scale,\n",
@@ -117,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
